@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Wed Feb 13 15:21:59 CET 2008 - cfarrell@suse.de
+
+- Added bootstrap classes for analysis and output 
+
+-------------------------------------------------------------------
 Wed Feb 13 13:34:28 CET 2008 - cfarrell@suse.de
 
 - Positional information now output to a list and min and max 
